--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -20,19 +20,19 @@
                 <div class="navChild w-100">
                     <div class="ps-5">
                         <img src="../img/summary.svg" alt="summary">
-                        <div class="d-flex align-items-center">Summary</div>
+                        <a class="d-flex align-items-center" href="../summary.html">Summary</a>
                     </div>
                     <div class="ps-5">
                         <img src="../img/board.svg" alt="board">
-                        <div class="d-flex align-items-center">Board</div>
+                        <a class="d-flex align-items-center" href="../board.html">Board</a>
                     </div>
                     <div class="ps-5">
                         <img class="w-38" src="../img/addTask.svg" alt="add task">
-                        <div class="d-flex align-items-center">Add Task</div>
+                        <a class="d-flex align-items-center" href="#">Add Task</a>
                     </div>
                     <div class="ps-5">
                         <img class="w-38" src="../img/contacts.svg" alt="contacts">
-                        <div class="d-flex align-items-center">Contacts</div>
+                        <a class="d-flex align-items-center" href="../contacts.html">Contacts</a>
                     </div>
                 </div>
             </div>
