two letters instead of img

--- a/styles/styleSidebar.css
+++ b/styles/styleSidebar.css
@@ -34,8 +34,15 @@ header {
     font-size: 20px;
 }
 
+.twoLetters {
+    color:  #31aee3;
+    border: 3px solid black;
+    border-radius: 100%;
+    padding: 10px;
+}
+
 .gap26px {
-    padding-left: 26px;
+    margin-left: 26px;
 }
 
 .logoDiv {
