--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,15 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <script src="../scripts/bootstrap.js"></script>
-    <link rel="stylesheet" href="../styles/bootstrap.css" />
-    <link rel="stylesheet" href="../styles/fonts.css" />
-    <link rel="stylesheet" href="../styles/style.css" />
-</head>
-<body> -->
     <div class="sidebar">
         <nav>
             <div class="w-100 d-flex flex-column align-items-center">
@@ -49,11 +37,9 @@
             <div>
                 Kanban Project Management Tool
             </div>
-            <div>
+            <div class="d-flex align-items-center">
                 <img src="../img/icon_question.png" alt="question">
-                <img class="gap26px" src="../img/SM.png" alt="SM">
+                <div class="bold twoLetters gap26px">SM</div>
             </div>
         </header>
     </div>
-<!-- </body>
-</html> -->
