--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -2,7 +2,7 @@
         <nav>
             <div class="w-100 d-flex flex-column align-items-center">
                 <div class="logoDiv">
-                    <img src="../img/logoWhite.svg" alt="JOIN">
+                    <a href="../summary.html"><img src="../img/logoWhite.svg" alt="JOIN"></a>
                 </div>
 
                 <div class="navChild w-100">
