tried drag and drop

--- a/styles/board.css
+++ b/styles/board.css
@@ -45,3 +45,8 @@
 .height40Px {
     height: 40px;
 }
+
+#todo, #inProgress, #awaitingFeedback, #done {
+    border: 2px dashed lightgrey;
+    height: 100%;
+}
