--- a/styles/board.css
+++ b/styles/board.css
@@ -50,3 +50,52 @@
     border: 2px dashed lightgrey;
     height: 100%;
 }
+
+.bgWhite2 {
+    background-color: white;
+}
+
+.heightWidth45Px {
+    height: 40px;
+    width: 40px;
+}
+
+.popUpBoardBackground {
+    position: absolute;
+    top: 0;
+    height: 100vh;
+    width: 100%;
+    background-color: rgb(0, 0, 0, 0.2);
+}
+
+.popUpBoardTask {
+    position:relative;
+    min-height: 100px;
+    min-width: 400px;
+    background-color: white;
+}
+
+.boardTaskClose {
+    position: absolute;
+    top: 25px;
+    right: 25px;
+}
+
+.heightWidth35Px {
+    height: 35px;
+    width: 35px;
+}
+
+.boardTaskEdit {
+    position: absolute;
+    bottom: 25px;
+    right: 25px;
+}
+
+.dNone {
+    display: none !important;
+}
+
+.height35Px {
+    height: 35px;
+}
