--- a/styles/board.css
+++ b/styles/board.css
@@ -48,7 +48,9 @@
 
 #todo, #inProgress, #awaitingFeedback, #done {
     border: 2px dashed lightgrey;
-    height: 100%;
+    min-height: 100%;
+    max-height: 100%;
+    /* overflow-y:scroll; */
 }
 
 .bgWhite2 {
