--- a/styles/taskstyle.css
+++ b/styles/taskstyle.css
@@ -332,7 +332,7 @@ form textarea {
     margin-left: -27px;
     padding-left: 18px;
     padding-top: 5px;
-    padding-bottom: 5px;
+    padding-bottom: 8px;
     overflow-x: hidden;
 }
 
@@ -531,4 +531,9 @@ li {
 .check-btn img {
     object-fit: contain;
     height: 21px;
+}
+
+#hidden-error p {
+    color: red !important;
+    padding-left: 15px;
 }
