weitere bugfixes, da subtasks vorher falsch herum angezeigt war

--- a/styles/taskstyle.css
+++ b/styles/taskstyle.css
@@ -474,6 +474,13 @@ li {
 }
 
 
+.category-dropdown-items:hover {
+    background-color: lightgray;
+}
+
+.contact-item-container:hover {
+    background-color: lightgray;
+}
 
 .contacts {
     margin-top: -15px;
