display-flex and parentDiv delete margin-top

--- a/styles/summary.css
+++ b/styles/summary.css
@@ -1,5 +1,5 @@
 .parentDiv {
-    margin-top: -22px;
+    /* margin-top: -22px; */
     margin-left: 232px;
     height: calc(100vh - 91px);
     width: calc(100% - 232px);
