--- a/styles/board.css
+++ b/styles/board.css
@@ -50,6 +50,9 @@
     border: 2px dashed lightgrey;
     min-height: 100%;
     max-height: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    max-height: 50vh;
     /* overflow-y:scroll; */
 }
 
@@ -108,4 +111,27 @@
 
 .display-flex {
     display: flex;
+}
+
+/* ---------- SCROLLBAR ---------- */
+/* width */
+::-webkit-scrollbar {
+width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+box-shadow: inset 0 0 5px grey; 
+border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+background: grey; 
+border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+background: #5e5e5e; 
 }
