added remote storage

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -20,19 +20,27 @@
           <div class="navChild w-100">
             <div class="ps-5">
               <img src="../img/summary.svg" alt="summary" />
-              <div class="d-flex align-items-center">Summary</div>
+              <div class="d-flex align-items-center">
+                <a href="summary.html" class="link">Summary</a>
+              </div>
             </div>
             <div class="ps-5">
               <img src="../img/board.svg" alt="board" />
-              <div class="d-flex align-items-center">Board</div>
+              <div class="d-flex align-items-center">
+                <a href="board.html" class="link">Board</a>
+              </div>
             </div>
             <div class="ps-5">
               <img class="w-38" src="../img/addTask.svg" alt="add task" />
-              <div class="d-flex align-items-center">Add Task</div>
+              <div class="d-flex align-items-center">
+                <a href="addtask.html" class="link">Add</a> Task
+              </div>
             </div>
             <div class="ps-5">
               <img class="w-38" src="../img/contacts.svg" alt="contacts" />
-              <div class="d-flex align-items-center">Contacts</div>
+              <div class="d-flex align-items-center">
+                <a href="contacts.html" class="link">Contacts</a>
+              </div>
             </div>
           </div>
         </div>
