--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -202,8 +202,6 @@ body {
 .custom-style-contacts {
   height: 100vh;
   display: flex;
-
-  margin-top: -22px;
   margin-left: 232px;
   /* height: calc(100vh - 91px);
     width: calc(100% - 232px); */
@@ -304,7 +302,7 @@ body {
 }
 
 .circle {
-  background-color: rosybrown;
+  border: 4px solid #fff !important;
   color: #ffffff;
   border-radius: 50%;
   width: 48px;
