--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,64 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="../scripts/bootstrap.js"></script>
-    <link rel="stylesheet" href="../styles/bootstrap.css" />
-    <link rel="stylesheet" href="../styles/fonts.css" />
-    <link rel="stylesheet" href="../styles/style.css" />
-  </head>
-  <body>
-    <div class="sidebar">
-      <nav>
-        <div class="w-100 d-flex flex-column align-items-center">
-          <div class="logoDiv">
-            <img src="../img/logo.svg" alt="JOIN" />
-          </div>
 
-          <div class="navChild w-100">
-            <div class="ps-5">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="../scripts/bootstrap.js"></script>
+  <link rel="stylesheet" href="../styles/bootstrap.css" />
+  <link rel="stylesheet" href="../styles/fonts.css" />
+  <link rel="stylesheet" href="../styles/style.css" />
+</head>
+
+<body>
+  <div class="sidebar">
+    <nav>
+      <div class="w-100 d-flex flex-column align-items-center">
+        <div class="logoDiv">
+          <img src="../img/logo.svg" alt="JOIN" />
+        </div>
+
+        <div class="navChild w-100">
+          <div class="ps-5">
+            <a href="summary.html" class="link d-flex align-items-center">
               <img src="../img/summary.svg" alt="summary" />
-              <div class="d-flex align-items-center">
-                <a href="summary.html" class="link">Summary</a>
-              </div>
-            </div>
-            <div class="ps-5">
+              <div class="link-text">Summary</div>
+            </a>
+          </div>
+          <div class="ps-5">
+            <a href="board.html" class="link d-flex align-items-center">
               <img src="../img/board.svg" alt="board" />
-              <div class="d-flex align-items-center">
-                <a href="board.html" class="link">Board</a>
-              </div>
-            </div>
-            <div class="ps-5">
+              <div class="link-text">Board</div>
+            </a>
+          </div>
+          <div class="ps-5">
+            <a href="addtask.html" class="link d-flex align-items-center">
               <img class="w-38" src="../img/addTask.svg" alt="add task" />
-              <div class="d-flex align-items-center">
-                <a href="addtask.html" class="link">Add</a> Task
-              </div>
-            </div>
-            <div class="ps-5">
+              <div class="link-text">Add Task</div>
+            </a>
+          </div>
+          <div class="ps-5">
+            <a href="contacts.html" class="link d-flex align-items-center">
               <img class="w-38" src="../img/contacts.svg" alt="contacts" />
-              <div class="d-flex align-items-center">
-                <a href="contacts.html" class="link">Contacts</a>
-              </div>
-            </div>
+              <div class="link-text">Contacts</div>
+            </a>
           </div>
         </div>
+      </div>
 
-        <div>
-          <div class="legalNoticeDiv">
-            <img src="../img/info.svg" alt="info" />
-            <div>Legal notice</div>
-          </div>
+      <div class="navBar-bottom">
+        <div class="legalNoticeDiv">
+          <img src="../img/info.svg" alt="info" />
+          <div>Legal notice</div>
         </div>
-      </nav>
+      </div>
+    </nav>
 
-      <header>
-        <div>Kanban Project Management Tool</div>
-        <div>
-          <img src="../img/icon_question.png" alt="question" />
-          <img class="gap26px" src="../img/SM.png" alt="SM" />
-        </div>
-      </header>
-    </div>
-  </body>
+    <header>
+      <div class="resp-logo">
+        <img src="./img/logo_dark.svg" alt="">
+      </div>
+      <div class="header-text">Kanban Project Management Tool</div>
+      <div>
+        <img class="icon-question" src="../img/icon_question.png" alt="question" />
+        <img class="gap26px icon-user" src="../img/SM.png" alt="SM" />
+      </div>
+    </header>
+  </div>
+</body>
+
 </html>
