--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../styles/bootstrap.css" />
   <link rel="stylesheet" href="../styles/fonts.css" />
   <link rel="stylesheet" href="../styles/style.css" />
-</head>
+</head> -->
 
 <body>
   <div class="sidebar">
@@ -67,4 +67,4 @@
   </div>
 </body>
 
-</html>
+<!-- </html> -->
