--- a/styles/styleSidebar.css
+++ b/styles/styleSidebar.css
@@ -115,7 +115,7 @@ header {
     .resp-logo {
         display: block;
         position: absolute;
-        left: 2%;
+        left: 8px;
         width: 32px;
         height: 32px;
     }
