--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,62 +1,70 @@
+<!-- <!DOCTYPE html>
+<html lang="en">
 
- <div class="sidebar">
-        <nav>
-            <div class="w-100 d-flex flex-column align-items-center">
-                <div class="logoDiv">
-                    <a href="../summary.html"><img src="../img/logoWhite.svg" alt="JOIN"></a>
-                </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="../scripts/bootstrap.js"></script>
+  <link rel="stylesheet" href="../styles/bootstrap.css" />
+  <link rel="stylesheet" href="../styles/fonts.css" />
+  <link rel="stylesheet" href="../styles/style.css" />
+</head> -->
 
-                <div class="navChild w-100">
-                    <div class="ps-5">
-                        <img src="../img/summary.svg" alt="summary">
-                        <a class="d-flex align-items-center" href="../summary.html">Summary</a>
-                    </div>
-                    <div class="ps-5">
-                        <img src="../img/board.svg" alt="board">
-                        <a class="d-flex align-items-center" href="../board.html">Board</a>
-                    </div>
-                    <div class="ps-5">
-                        <img class="w-38" src="../img/addTask.svg" alt="add task">
-                        <a class="d-flex align-items-center" href="#">Add Task</a>
-                    </div>
-                    <div class="ps-5">
-                        <img class="w-38" src="../img/contacts.svg" alt="contacts">
-                        <a class="d-flex align-items-center" href="../contacts.html">Contacts</a>
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="navChild w-100" id="linkSummary">
-                <div class="ps-5">
-                    <img src="../img/summary.svg" alt="summary">
-                    <div class="d-flex align-items-center">Summary</div>
-                </div>
-                <div class="ps-5" id="linkBoard">
-                    <img src="../img/board.svg" alt="board">
-                    <div class="d-flex align-items-center">Board</div>
-                </div>
-                <div class="ps-5" id="linkTasks">
-                    <img class="w-38" src="../img/addTask.svg" alt="add task">
-                    <div class="d-flex align-items-center">Add Task</div>
-                </div>
-                <div class="ps-5" id="linkContacts">
-                    <img class="w-38" src="../img/contacts.svg" alt="contacts">
-                    <div class="d-flex align-items-center">Contacts</div>
-                </div>
-            </div>
+<body>
+  <div class="sidebar">
+    <nav>
+      <div class="w-100 d-flex flex-column align-items-center">
+        <div class="logoDiv">
+          <img src="../img/logo.svg" alt="JOIN" />
         </div>
 
-        <div>
-            <div class="legalNoticeDiv">
-                <img src="../img/info.svg" alt="info">
-                <div>Legal notice</div>
-            </div>
+        <div class="navChild w-100">
+          <div class="ps-5">
+            <a href="summary.html" class="link d-flex align-items-center">
+              <img src="../img/summary.svg" alt="summary" />
+              <div class="link-text">Summary</div>
+            </a>
+          </div>
+          <div class="ps-5">
+            <a href="board.html" class="link d-flex align-items-center">
+              <img src="../img/board.svg" alt="board" />
+              <div class="link-text">Board</div>
+            </a>
+          </div>
+          <div class="ps-5">
+            <a href="addtask.html" class="link d-flex align-items-center">
+              <img class="w-38" src="../img/addTask.svg" alt="add task" />
+              <div class="link-text">Add Task</div>
+            </a>
+          </div>
+          <div class="ps-5">
+            <a href="contacts.html" class="link d-flex align-items-center">
+              <img class="w-38" src="../img/contacts.svg" alt="contacts" />
+              <div class="link-text">Contacts</div>
+            </a>
+          </div>
+        </div>
+      </div>
 
-            <div class="d-flex align-items-center">
-                <img src="../img/icon_question.png" alt="question">
-                <div class="bold twoLetters gap26px">SM</div>
-            </div>
-        </header>
-    </div>
+      <div class="navBar-bottom">
+        <div class="legalNoticeDiv">
+          <img src="../img/info.svg" alt="info" />
+          <div>Legal notice</div>
+        </div>
+      </div>
+    </nav>
 
+    <header>
+      <div class="resp-logo">
+        <img src="./img/logo_dark.svg" alt="">
+      </div>
+      <div class="header-text">Kanban Project Management Tool</div>
+      <div>
+        <img class="icon-question" src="../img/icon_question.png" alt="question" />
+        <img class="gap26px icon-user" src="../img/SM.png" alt="SM" />
+      </div>
+    </header>
+  </div>
+</body>
+
+<!-- </html> -->
