--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -109,6 +109,7 @@ body {
   background-position-x: 90%;
   background-position-y: center;
 }
+
 .dialog__editInput:focus,
 .dialog__createInput:focus {
   outline: 1px solid #007cee;
@@ -123,10 +124,12 @@ body {
 #dialog__createNameInput {
   background-image: url(../img/person.svg);
 }
+
 #dialog__editEmailInput,
 #dialog__createEmailInput {
   background-image: url(../img/mail.svg);
 }
+
 #dialog__editPhoneInput,
 #dialog__createPhoneInput {
   background-image: url(../img/call.svg);
@@ -151,6 +154,7 @@ body {
   border: 1px solid #2a3647;
   background-color: white;
 }
+
 .btn-hover:hover {
   border: 1px solid #007cee;
   color: #007cee;
@@ -158,6 +162,7 @@ body {
   box-shadow: 0px 3px 15px -2px rgba(0, 0, 0, 0.14);
   transition: 125ms ease-in-out;
 }
+
 .btn-save:hover {
   background-color: #007cee;
   color: white;
@@ -202,8 +207,6 @@ body {
 .custom-style-contacts {
   height: 100vh;
   display: flex;
-
-  margin-top: -22px;
   margin-left: 232px;
   /* height: calc(100vh - 91px);
     width: calc(100% - 232px); */
@@ -260,12 +263,13 @@ body {
   overflow: auto !important;
 }
 
-.container-letter {
-  /* display: flex; */
-  justify-content: center;
-  flex-direction: column;
-  align-items: center;
-}
+/* .container-letter {
+  position: relative;
+} */
+
+/* .container-letter > span {
+  position: absolute;
+} */
 
 .initial {
   /* display: flex; */
@@ -304,7 +308,7 @@ body {
 }
 
 .circle {
-  background-color: rosybrown;
+  border: 4px solid #fff !important;
   color: #ffffff;
   border-radius: 50%;
   width: 48px;
@@ -459,5 +463,43 @@ body {
 
   to {
     transform: translateX(0);
+  }
+}
+
+/* RESPONSIVE */
+@media screen and (min-width: 320px) and (max-width: 420px) {
+  body {
+    overflow: hidden;
+  }
+
+  #dialog__editContact, #dialog__createContact {
+    display: none;
+  }
+
+  .custom-style-contacts {
+    height: 100svh;
+    margin-left: 0;
+    display: grid;
+  }
+
+  #contactsMain {
+    display: none;
+  }
+
+  #contactsListContainer {
+    width: 100%;
+    overflow-y: hidden;
+    /* padding: 0; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .custom-btn {
+    display: block;
+  }
+
+  .container-letter {
+    display: flex;
   }
 }
