--- a/styles/styleSidebar.css
+++ b/styles/styleSidebar.css
@@ -1,146 +1,146 @@
 nav {
-    position:absolute;
-    background-color: rgba(42,54,71,255);
-    width: 232px;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    padding-top: 50px;
-    padding-bottom: 100px;
-    color: white;
+  position: fixed;
+  background-color: rgba(42, 54, 71, 255);
+  width: 232px;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  padding-top: 50px;
+  padding-bottom: 100px;
+  color: white;
 }
 
 nav a {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
 
 .sidebar {
-    display: flex;
+  display: flex;
 }
 
 .activeSite {
-    background-color: rgba(9,25,49,255);
+  background-color: rgba(9, 25, 49, 255);
 }
 
 header {
-    width: 100%;
-    height: 89px;
-    box-shadow: -2px 0px 6px 0px rgb(0, 0, 0, 0.2);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 355px;
-    padding-right: 36px;
-    font-size: 20px;
+  width: 100%;
+  height: 89px;
+  box-shadow: -2px 0px 6px 0px rgb(0, 0, 0, 0.2);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 355px;
+  padding-right: 36px;
+  font-size: 20px;
 }
 
 .twoLetters {
-    color:  #31aee3;
-    border: 3px solid black;
-    border-radius: 100%;
-    padding: 10px;
+  color: #31aee3;
+  border: 3px solid black;
+  border-radius: 100%;
+  padding: 10px;
 }
 
 .gap26px {
-    margin-left: 26px;
+  margin-left: 26px;
 }
 
 .logoDiv {
-    padding-bottom: 100px;
+  padding-bottom: 100px;
 }
 
 .resp-logo {
-    display: none;
+  display: none;
 }
 
-.navChild>div {
-    display: flex;
-    padding-top: 8px;
-    padding-bottom: 8px;
-    margin-top: 8px;
-    margin-bottom: 8px;
+.navChild > div {
+  display: flex;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  margin-top: 8px;
+  margin-bottom: 8px;
 }
 
-.navChild>div:hover {
-    background-color: rgba(9,25,49,255);
-    cursor: pointer;
+.navChild > div:hover {
+  background-color: rgba(9, 25, 49, 255);
+  cursor: pointer;
 }
 
-.navChild>div img {
-    padding-right: 8px;
+.navChild > div img {
+  padding-right: 8px;
 }
 
 .legalNoticeDiv {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .legalNoticeDiv img {
-    padding-right: 15px;
+  padding-right: 15px;
 }
 
 .w-38 {
-    width: 38px;
+  width: 38px;
 }
 
 /* RESPONSIVE */
 
-@media screen and (min-width: 320px) and (max-width: 420px){
-    nav {
-        position: fixed;
-        width: 100vw;
-        bottom: 0;
-        left: 0;
-        right: 0;
-        z-index: 1000;
-        will-change: transform;
-        transform: translateZ(0);
-        display: flex;
-        height: 32px;
-        box-sizing: border-box;
-    }
+@media screen and (min-width: 320px) and (max-width: 420px) {
+  nav {
+    position: fixed;
+    width: 100vw;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    will-change: transform;
+    transform: translateZ(0);
+    display: flex;
+    height: 32px;
+    box-sizing: border-box;
+  }
 
-    header {
-        position: relative;
-        height: 80px;
-    }
+  header {
+    position: relative;
+    height: 80px;
+  }
 
-    .header-text {
-        display: none;
-    }
+  .header-text {
+    display: none;
+  }
 
-    .resp-logo {
-        display: block;
-        position: absolute;
-        left: 8px;
-        width: 32px;
-        height: 32px;
-    }
+  .resp-logo {
+    display: block;
+    position: absolute;
+    left: 8px;
+    width: 32px;
+    height: 32px;
+  }
 
-    .icon-question {
-        display: none;
-    }
+  .icon-question {
+    display: none;
+  }
 
-    .icon-user {
-        width: 32px;
-        height: 32px;
-    }
-    .navChild {
-        display: flex;
-    }
+  .icon-user {
+    width: 32px;
+    height: 32px;
+  }
+  .navChild {
+    display: flex;
+  }
 
-    .logoDiv {
-        display: none;
-    }
+  .logoDiv {
+    display: none;
+  }
 
-    .navBar-bottom {
-        display: none;
-    }
+  .navBar-bottom {
+    display: none;
+  }
 
-    .link-text {
-        display: none;
-    }
+  .link-text {
+    display: none;
+  }
 }
